After CMF 1.5.5

  Others

    - Made cut / copy / paste tests more independent from implementation
      details of '_verifyObjectPaste'.

    - Modified several deprecation warnings to indicate point-of-use of the
      deprecated feature.

CMF 1.5.5 (2005/11/20)

  Bug Fixes

    - DefaultWorkflowDefinition: Changed meta_type to make it unique.
      (http://www.zope.org/Collectors/CMF/298)

    - CMFSetup: fixed empty attribute parsing when an encoding is
      defined.

  Others

    - CMFCore: removed old backward compatibility code that slowed down
      TypeInformation.allowType and gave PortalFolder.allowedContentTypes
      quadratic complexity.

    - Removed deprecated 'all_cmf_tests.py' and supporting 'test_all.py'
      from products (use 'zopectl test' to run CMF tests instead).

CMF 1.5.5-beta (2005/11/06)

  Bug Fixes

    - CMFCore.DynamicType/ActionProviderBase: If an action cannot be looked
      up, provide a more helpful debugging message for the error log.

    - CMFCore.MemberDataTool: Fixed the pruneMemberData functionality in the
      ZMI: Now it is enough to press the button once.

    - Collector #381:  CMFCore unit tests depended on CMFDefault / workflow.

    - CalendarTool: If an event ends at exactly midnight, don't show it
      in the list of events for the day starting at midnight.
      (http://www.zope.org/Collectors/CMF/246)

  Features

    - CMFCore:  added 'skinname' to the thread-specific tuple created by
      the Skinnable base class to cache the skin path lookup, to facilitate
      querying later;  added a 'getCurrentSkinName' to the Skinnable API
      to do the query.  Thanks to Laurent Rowe for the patch.

    - CMFSetup: added support for importing and exporting workflow script
      metadata for scripts that are External Methods. One very important
      difference to other scripts remains: Since the CMFSetup machinery
      cannot access the filesystem code for external methods it only